--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/png" href="/images/favicon1.png" />
+    <title>Landify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="dark:bg-gray-900">
