--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/png" href="/images/landify.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landify Dashboard</title>
   </head>
   <body class="dark:bg-gray-900">
     <div id="root"></div>
